--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "bulma": "^0.4.1",
     "pug": "^2.0.0-rc.1",
     "pug-loader": "^2.3.0",
     "vue": "^2.2.6"
